fix video player being too tall

--- a/masto.css
+++ b/masto.css
@@ -678,6 +678,9 @@ body.lighter {
 }
 
 /* you too tall */
-.media-gallery, .video-player {
+.media-gallery, div:has(> .video-player) {
     max-height:512px;
+}
+div:has(> .video-player) {
+    margin:auto;
 }
